# smart-lock

./: partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/App/: App_Communication.c  App_Communication.h  App_IO.c  App_IO.h
main/Driver/: Dri_BT.c  Dri_BT.h  Dri_NVS.c  Dri_NVS.h  Dri_Wifi.c  Dri_Wifi.h
main/Inf/: Inf_BDR6120.c  Inf_BDR6120.h  Inf_FPM383.c  Inf_FPM383.h  Inf_SC12B.c  Inf_SC12B.h  Inf_WS2812.c  Inf_WS2812.h  Inf_WTN6170.c  Inf_WTN6170.h
main/common/: common_config.h
