idf_component_register(SRCS #配置需要包含的.c源文件
                        "main.c"
                        "./Inf/Inf_BDR6120.c"
                        "./Inf/Inf_WTN6170.c"
                        "./Inf/Inf_SC12B.c"
                        "./Inf/Inf_WS2812.c"
                        "./Driver/Dri_NVS.c"
                        "./Driver/Dri_BT.c"
                        "./Driver/Dri_Wifi.c"
                        "./App/App_IO.c"
                        "./App/App_Communication.c"
                        "./Inf/Inf_FPM383.c"
                    INCLUDE_DIRS
                    "."
                    "./Inf"
                    "./common"
                    "./App"
                    "./Driver"
                     )
